@@ -35,6 +35,7 @@ Changes for 1.4.j:
 
 Changes for 1.4.3:
 
+ - [ZBX-218] fixed problem "Unable to add performance counter" on start of win agent(Sasha)
  - [ZBX-192] fixed active checks stops after connection loss (Sasha)
  - [ZBX-152] fixed inefficient check of user permissions (Alexei)
  - [ZBX-189, CVE-2007-6210] fixed super-user permissions of user commands (Alexei)
